--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,34 @@
-<!DOCTYPE html>
+<!DOCTYPE html> {% load static %}
 <html>
   <head>
-    <title>Django Girls blog</title>
+    <div class="page-header">
+      <h1><a href="/">Django Girls Blog</a></h1>
+    </div>
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"
+    />
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
   </head>
   <body>
-    {% for post in posts %} {{ post }} {% endfor %}
-    <header>
-      <h1><a href="/">Django Girls Blog</a></h1>
-    </header>
-
-    {% for post in posts %}
-    <article>
-      <time>published: {{ post.published_date }}</time>
-      <h2><a href="">{{ post.title }}</a></h2>
-      <p>{{ post.text|linebreaksbr }}</p>
-    </article>
-    {% endfor %}
+    <div class="content container">
+      <div class="row">
+        <div class="col-md-8">
+          {% for post in posts %}
+          <div class="post">
+            <div class="date">
+              <p>published: {{ post.published_date }}</p>
+            </div>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
   </body>
 </html>
