--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,34 +1,7 @@
-<!DOCTYPE html> {% load static %}
-<html>
-  <head>
-    <div class="page-header">
-      <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
-    <link
-      rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"
-    />
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
-  </head>
-  <body>
-    <div class="content container">
-      <div class="row">
-        <div class="col-md-8">
-          {% for post in posts %}
-          <div class="post">
-            <div class="date">
-              <p>published: {{ post.published_date }}</p>
-            </div>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+{% extends 'blog/base.html' %} {% block content %} {% for post in posts %}
+<article class="post">
+  <time class="date"> {{ post.published_date }} </time>
+  <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+  <p>{{ post.text|linebreaksbr }}</p>
+</article>
+{% endfor %} {% endblock %}
