Added views to create/edit blog post inside the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,4 +4,4 @@
   <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
   <p>{{ post.text|linebreaksbr }}</p>
 </article>
-{% endfor %} {% endblock %}
+{% endfor %} {% endblock %} git push
