--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,38 +1,34 @@
 {% load static %}
+<!DOCTYPE html>
 <html>
   <head>
+    {% if user.is_authenticated %}
+    <a href="{% url 'post_new' %}" class="top-menu"> Alteração </a>
+    {% endif %}
     <title>Django Girls blog</title>
     <link
       rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"
-    />
-    <link
-      href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext"
-      rel="stylesheet"
-      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext"
     />
     <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
   </head>
   <body>
-    <div class="page-header">
-      <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
-    <div class="content container">
-      <div class="row">
-        <div class="col-md-8">
-          {% block content %} {% for post in posts %}
-          <div class="post">
-            <div class="date">{{ post.published_date }}</div>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-          </div>
-          {% endfor %}{% endblock %}
-        </div>
+    <header class="page-header">
+      <div class="container">
+        <a href="{% url 'post_new' %}" class="top-menu"> Adicionar </a>
+        <h1><a href="/">Django Girls Blog</a></h1>
       </div>
-    </div>
+    </header>
+    <main class="content container">
+      <div class="row">
+        <div class="col">{% block content %} {% endblock %}</div>
+      </div>
+    </main>
   </body>
 </html>
